--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <a href="index.html" class="navbar-brand pe-3">
               <img src="assets/media/logo-2.png" width="47" alt="Silicon">
             </a>
-            <div id="navbarNav" class="offcanvas offcanvas-end bg-dark">
+            <div id="navbarNav" class="offcanvas offcanvas-end bg-dark" style="background-color: #000 !important;">
               <div class="offcanvas-header border-bottom border-light">
                 <h5 class="offcanvas-title text-white">Menu</h5>
                 <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -66,13 +66,7 @@
                     <a href="#courses" class="nav-link text-uppercase nav-item-style">Cursos</a>
                   </li>
                 </ul>
-              </div>
-              <div class="offcanvas-header border-top border-light">
-                <a href="https://themes.getbootstrap.com/product/silicon-business-technology-template-ui-kit/" class="btn btn-primary w-100" target="_blank" rel="noopener">
-                  <i class="bx bx-cart fs-4 lh-1 me-1"></i>
-                  &nbsp;Buy now
-                </a>
-              </div>      
+              </div>  
             </div>
             <div class="pe-lg-1" data-bs-theme="dark">
               <img src="assets/media/udemy.png" style="width: 100px;" alt="">
@@ -364,7 +358,7 @@
           <div class="position-relative zindex-2 pt-2 pt-sm-3 pt-md-4 pt-lg-5 mt-xl-3">
               <h2 class="h1 text-center pb-1 mb-2 ff-motserrat">
                   <span class="fw-600">Cursos</span> 
-                  <span class="text-uppercase fw-800 text-primary">Disponibles</span>
+                  <span class="text-uppercase fw-800 text-primary" style="    font-weight: 900;">Disponibles</span>
               </h2>
               <p class="fs-lg text-center pb-lg-2">
                 Descubre mi Mundo de Conocimiento: Explora
@@ -660,7 +654,7 @@
       <!-- Gallery (carousels) -->
       <section class="mb-5 pt-md-3 pt-lg-4 pt-xl-5">
         <h2 class="h1 text-center pb-1 mb-5 ff-motserrat">
-            <span class="text-uppercase fw-800 text-primary">Proyectos</span> 
+            <span class="text-uppercase fw-800 text-primary" style="font-weight: 900;">Proyectos</span> 
             <span class="fw-600">Realizados</span>
         </h2>
         <div class="pb-2 pb-sm-3 pb-md-4">
